# MeteoFrance

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
