[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteofrance-app"
version = "1.0.0"
description = "Application météo complète utilisant l'API MeteoFrance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "YoannDev90" }]
maintainers = [{ name = "YoannDev90" }]
keywords = ["weather", "meteo", "france", "api", "forecast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["meteofrance-api>=1.0.0", "toml>=0.10.0", "matplotlib>=3.0.0"]

[project.urls]
Homepage = "https://github.com/YoannDev90/MeteoFrance"
Repository = "https://github.com/YoannDev90/MeteoFrance"
Issues = "https://github.com/YoannDev90/MeteoFrance/issues"
Changelog = "https://github.com/YoannDev90/MeteoFrance/blob/main/README.md"

[project.scripts]
meteofrance = "main:main"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"" = ["*.toml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
